syntax = "proto3";

package health_check;

service HealthCheck {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
}

message HealthCheckRequest {}

message HealthCheckResponse {
  int64 status = 1;
  string message = 2;
}